# ipds

./: .gitignore  README.md  archive_downloader.py  clean_data.py  cleaners.py  cleanipeds.py  config.py  core.py  downloader.py  get_data.py  getipeds.py  ipds.py  pyproject.toml  requirements.txt  temp.py  test.json
notebooks/: cfg.py  trends.ipynb
src/genpeds/: __init__.py  cleaners.py  cleanipeds.py  cli.py  config.py  core.py  downloader.py  getipeds.py  t.py
src/genpeds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classes.py  test_cleaners.py  test_downloader.py
