[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "genpeds"
description = "Work with NCES IPEDS data: from admissions to graduation"
requires-python = ">=3.13.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
version = "1.1.1"
authors = [{"name" = "Ravan Hawrami", "email" = "ravanhawrami@gmail.com"}]
readme = {"file" = "README.md", content-type = "text/markdown"}
dependencies = ["pandas", "numpy", "openpyxl", "xlrd", "requests", "bs4", "us"]
license = "MIT"
license-files = ["LICENSE.md"]

[project-urls]
Homepage = "https://github.com/rhawrami/genpeds"

[project-scripts]
genpeds-cli = "genpeds.cli:main"